Some design corrections

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -39,6 +39,8 @@ main{
     color: white;
     padding: 1rem 2rem;
     cursor: pointer;
+    font-family: Moonic;
+    text-transform: uppercase;
 }
 
 .contact_form form > *{
