--- a/public/css/participation.css
+++ b/public/css/participation.css
@@ -43,6 +43,7 @@ main > .container > form > button{
     margin-bottom: 10rem;
     background: none;
     cursor: pointer;
+    font-family: Moonic;
 }
 main > .container > form div{
     display: flex;
