--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -31,6 +31,7 @@ a.cta {
     margin-top: 10rem;
     font-family: Moonic;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 .product{
     display: flex;
