--- a/public/css/participate.css
+++ b/public/css/participate.css
@@ -17,8 +17,9 @@ input[type="file"]{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(30, 30, 30);
+    background-color: #080808;
     padding: 4rem;
+    border: solid #DAC469 1px;
 
 }
 #popup p{
