--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -21,8 +21,9 @@ input[type="radio"]{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(30, 30, 30);
+    background-color: #080808;
     padding: 4rem;
+    border: solid #DAC469 1px;
 }
 #logout .box p{
     font-size: 3rem;
@@ -74,32 +75,37 @@ input[type="radio"]{
     margin-bottom: 3rem;
     cursor: pointer;
     font-weight: normal;
-    transition: all 0.2s;
-    padding: 1rem 2rem;
     position: relative;
     text-decoration: none;
-    padding-right: 8rem;
     font-family: Moonic;
     letter-spacing: 2px;
+    width: fit-content;
 }
-#profil .container nav > span{
-    color: #DAC469;
-    margin-top: 3rem;
+#profil .container nav label:hover{
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    transition: all 0.2s;
 }
 #profil .container nav label.current{
-    background-color: rgba(255, 255, 255,0.1);
-    color: white;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+#profil .container nav span:last-child{
+    margin-top: 8rem;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 #profil .container nav label.current:before{
     content: "";
-    height: 90%;
-    width: 2px;
-    background-color: #DAC469;
+    height: 1px;
+    width: 100%;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
     position: absolute;
-    left: -10px;
-    top: 50%;
-    border-radius: 15px;
-    transform: translateY(-50%);
+    left: 0;
+    bottom: -10px;
 }
 #profil .container section{
     flex-basis: 85%;
@@ -109,11 +115,10 @@ input[type="radio"]{
 }
 .works_section .works{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 .works_section .work{
-    flex-basis: 40%;
+    width: 33%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,7 +127,7 @@ input[type="radio"]{
 }
 .works_section .work img{
     aspect-ratio: 16/9;
-    width: 100%;
+    width: 80%;
     height: auto;
     object-fit: cover;
 }
@@ -143,6 +148,7 @@ input[type="radio"]{
     font-size: 1.8rem;
     text-align: center;
     font-family: Montserrat;
+    white-space: nowrap;
 
 }
 div.works.hidden{
