--- a/public/css/article.css
+++ b/public/css/article.css
@@ -49,13 +49,16 @@ input[type="radio"]{
     margin-inline: 1rem;
     margin: 0;
     white-space: nowrap;
+    text-transform: none;
 
 }
 #product h2{
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     margin-inline: 1rem;
     margin: 0;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 .infos{
     margin-inline: 1rem;
@@ -136,7 +139,6 @@ input[type="radio"]{
     background-color: white;
     font-size: 2rem;
     padding: 1.5rem 2.5rem;
-    text-transform: uppercase;
     cursor: pointer;
     font-weight: normal;
     font-family: Moonic;
