--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -5,7 +5,9 @@
 #cart h2{
     font-size: 4rem;
     font-weight: normal;
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     margin: 0;
 }
 .total{
@@ -80,18 +82,22 @@ a.cta {
 }
 .product .quantity a{
     font-size: 3rem;
-    color: white;
     text-decoration: none;
     display: block;
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     font-weight: bold;
 }
 .product .quantity h4{
     margin-inline: 1.5rem;
     margin-block: 0;
 }
+
 .product .amount h3{
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .product .amount a{
     font-size: 1.8rem;
@@ -125,6 +131,8 @@ a.cta {
     z-index: -2;
     transform: translate(-50%,-50%) scaleX(0);
 }
+
+
 .product .amount a::before{
     background: white;
     z-index: -1;
@@ -133,6 +141,12 @@ a.cta {
 .product .amount a:hover::before{
     transform: translate(-50%,-50%) scaleX(1);
 }
+.product .amount{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
 .product .amount h4{
     margin-top: 0;
+    text-align: right;
 }
