--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -40,7 +40,7 @@ main{
     padding: 1rem 2rem;
     cursor: pointer;
     font-family: Moonic;
-    text-transform: uppercase;
+    font-size: 2rem;
 }
 
 .contact_form form > *{
@@ -53,6 +53,7 @@ main{
     border: none;
     border-bottom: solid white 1px;
     padding-bottom: 1rem;
+    font-size: 1.8rem;
 }
 
 .contact_form textarea{
