--- a/public/css/work.css
+++ b/public/css/work.css
@@ -26,7 +26,7 @@ section .container{
     content: "";
     width: 100%;
     height: 1px;
-    background-color: #DAC469;
+    background-color: linear-gradient(45deg,#845917,#DAC469 50%);
     bottom: -5px;
     left: 0;
     position: absolute;
@@ -72,28 +72,36 @@ section .container{
     letter-spacing: 0;
 }
 #work .work h4 span{
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     font-family: Montserrat;
     letter-spacing: 0;
 }
 #work .work p strong{
-    color: #DAC469;
+    font-weight: 300;
+    color: white;
 }
-#work .work p{
+#work .work p {
     font-weight: 300;
     margin-block: 3rem;
+}
+#work .work p span{
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 section h1{
     font-size: 4rem;
     white-space: nowrap;
     margin-bottom: 6rem;
-}
-section h1 span{
-    color: #DAC469;
-    display: inline-block;
-    width: fit-content;
     font-family: Moonic;
-    letter-spacing: 2px;
+}
+section h1 span a{
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-family: Moonic;
 }
 section .works{
     display: flex;
@@ -137,7 +145,9 @@ section .works h3{
 section .works h4{
     font-size: 2rem;
     margin-top: 0.5rem;
-    color: #DAC469;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
     font-family: Montserrat;
     letter-spacing: 0;
     
