--- a/public/css/index.css
+++ b/public/css/index.css
@@ -157,8 +157,9 @@ body main{
 }
 
 #guests{
-    margin-top: 5rem;
+    padding-top: 5rem;
     min-height: 100vh;
+    background-color: #080808;
 }
 #guests .guests{
     display: flex;
@@ -287,16 +288,16 @@ body main{
     letter-spacing: 0;
 }
 #about .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-block: 5rem;
 }
 #about .picture{
     flex-basis: 30%;
 }
 #about .text{
-    flex-basis: 60%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #about img{
     aspect-ratio: 1/1;
@@ -324,6 +325,7 @@ body main{
 }
 #about p{
     text-align: justify;
+    max-width: 800px;
 }
 #about a{
     display: flex;
@@ -346,5 +348,4 @@ body main{
     color: #DAC469;
     border-color: #DAC469;
 }
-
    
