--- a/public/css/shapes.css
+++ b/public/css/shapes.css
@@ -1,5 +1,6 @@
 #home .home_text{
     position: relative;
+    z-index: 1;
 }
 #home .home_text:after{
     content: "";
@@ -46,21 +47,151 @@ div#arrow {
     height: fit-content;
     transform: translate(-50%,-50%);
     top: 50%;
-    right: 0;
+    left: 90%;
     animation: upNdown 2s infinite;
+    z-index: 2;
 }
 div#arrow img{
     width: 100px;
 }
 #door{
     width: 100vw;
-    height: calc(100vh - 200px);
-    background: url("../images/background3.jpg");
+    height: 100vh; 
+    padding: 0;
+    top: 0;
+    left: 0;
+    background: url("../images/background4.jpg");
     background-size: cover;
+    z-index: -1;
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
     overflow: hidden;
 }
-#door img{
-    width: 100%;
+#door > div:not(:empty){
+    width: 25%;
     height: 100%;
-    object-fit: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+    max-width: none;
+
+}
+#door > div:not(:empty) > div:not(:empty){
+    position: relative;
+}
+#door div:empty{
+    flex-grow: 1;
+    background-color: #080808;
+}
+#door img{
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    object-position: bottom;
+    max-width: 110%;
+    position: relative;
+    z-index: 1;
+    transition: all 0.2s;
+
+}
+#door h1{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 75%;
+    left: 50%;
+    font-size: 6rem;
+    text-align: center;
+    white-space: nowrap;
+    transition: all 0.2s;
+}
+
+#guests .guest:nth-child(2){
+    position: relative;
+}
+
+#guests .guests{
+    position: relative;
+    z-index: 1;
+}
+#guests .guest:nth-child(2):after{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translate(-50%,-50%);
+    z-index: -1;
+}
+#guests .guest:nth-child(3) img{
+    display: block;
+    position: relative;
+}
+#guests .guest:nth-child(3) img:after{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: 100%;
+    bottom: 0;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#staff h1{
+    position: relative;
+    width: fit-content;
+    margin-inline: auto;
+}
+#staff h1::before{
+    content: "";
+    width: 200px;
+    height: 200px;
+    transform: translate(-50%,-50%) scaleX(-1);
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    z-index: -1;
+
+}
+#staff #arrow{
+    left: 10%;
+}
+#staff .category:last-child{
+    position: relative;
+}
+#staff .category:last-child:after{
+    content: "";
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 200px;
+    height: 200px;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translate(-50%,-50%);
+    animation: move 1s infinite linear;
+    
+
+}
+@keyframes move {
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(10deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
+    
 }
