--- a/public/css/shapes.css
+++ b/public/css/shapes.css
@@ -128,20 +128,28 @@ div#arrow img{
     transform: translate(-50%,-50%);
     z-index: -1;
 }
-#guests .guest:nth-child(3) img{
+#guests .guest:nth-child(3){
     display: block;
     position: relative;
+    z-index: 1;
 }
-#guests .guest:nth-child(3) img:after{
+#guests .guest:nth-child(3):after{
     content: "";
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
     position: absolute;
-    left: 100%;
-    bottom: 0;
+    left: 50%;
+    bottom: 0px;
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
+    animation: rotate infinite linear 1s;
+}
+@keyframes rotate {
+    to{
+        transform: rotate(360deg);
+    }
+    
 }
 #staff h1{
     position: relative;
@@ -194,4 +202,133 @@ div#arrow img{
         transform: rotate(0);
     }
     
+}
+
+#press{
+    position: relative
+}
+#press:after{
+    width: 300px;
+    height: 300px;
+    content: "";
+    position: absolute;
+    top: calc(50% - 150px);
+    left: calc(60% - 150px) ;
+    z-index: -1;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+}
+
+#shop .article{
+    position: relative;
+}
+#shop .article:first-child::before{
+    width: 300px;
+    height: 300px;
+    content: "";
+    position: absolute;
+    top: 65%;
+    left: -150px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 1s;
+    z-index: 1;
+}
+
+#shop .article:last-child::after{
+    width: 300px;
+    height: 300px;
+    content: "";
+    position: absolute;
+    top: -150px;
+    left: calc(100% - 150px);
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 1s;
+    z-index: 1;
+}
+#faq .container{
+    position: relative;
+}
+#product .container .pictures{
+    position: relative;
+}
+
+#product .container .pictures::before{
+    content: "";
+    width:  800px;
+    height: 800px;
+    transform: scaleY(-1) translateX(-75%) translateY(15%);
+    background: url("../images/shapes/circle_thin.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+
+}
+
+#product .container .pictures::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 110%;
+    width: 200px;
+    height: 200px;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: move 1s infinite linear;
+    scale: 1 -1;
+
+}
+#faq .container #arrow{
+    position: absolute;
+    top: -100px;
+    right: 0;
+   
+}
+#faq{
+    position: relative;
+}
+#faq::before{
+    width: 300px;
+    height: 300px;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -150px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 1s;
+    z-index: 1;
+}
+
+#cart .container{
+    position: relative;
+}
+
+#cart .container::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -50px;
+    width: 200px;
+    height: 200px;
+    transform: translate(100%,-50%);
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    scale: -1 -1;
+
+
+}
+
+#cart .ctaButton #arrow{
+    position: static;
+    transform: rotate(-90deg);
 }
