--- a/public/css/shapes.css
+++ b/public/css/shapes.css
@@ -143,7 +143,7 @@ div#arrow img{
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    animation: rotate infinite linear 1s;
+    animation: rotate infinite linear 5s;
 }
 @keyframes rotate {
     to{
@@ -151,12 +151,12 @@ div#arrow img{
     }
     
 }
-#staff h1{
+#staff h1, #contact h1{
     position: relative;
     width: fit-content;
     margin-inline: auto;
 }
-#staff h1::before{
+#staff h1::before, #contact h1::before{
     content: "";
     width: 200px;
     height: 200px;
@@ -207,16 +207,34 @@ div#arrow img{
 #press{
     position: relative
 }
+#press .container{
+    position: relative;
+}
 #press:after{
     width: 300px;
     height: 300px;
     content: "";
     position: absolute;
     top: calc(50% - 150px);
-    left: calc(60% - 150px) ;
+    right: -150px;
     z-index: -1;
     background: url("../images/shapes/star.png");
     background-size: contain;
+    animation: rotate linear infinite 5s;
+}
+
+#press .container:before{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200px;
+    height: 200px;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform:  translateX(-100%) translateY(25%) scale(-1);
+
 }
 
 #shop .article{
@@ -232,7 +250,7 @@ div#arrow img{
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    animation: rotate infinite linear 1s;
+    animation: rotate infinite linear 5s;
     z-index: 1;
 }
 
@@ -246,7 +264,7 @@ div#arrow img{
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    animation: rotate infinite linear 1s;
+    animation: rotate infinite linear 5s;
     z-index: 1;
 }
 #faq .container{
@@ -304,7 +322,7 @@ div#arrow img{
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    animation: rotate infinite linear 1s;
+    animation: rotate infinite linear 5s;
     z-index: 1;
 }
 
