--- a/public/css/shapes.css
+++ b/public/css/shapes.css
@@ -9,7 +9,7 @@
     position: absolute;
     right: 0;
     top: 100%;
-    transform: translate(-50%,-50%) scaleX(-1);
+    transform: translate(-25%,-60%) scaleX(-1);
     background: url("../images/shapes/circle.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -135,11 +135,11 @@ div#arrow img{
 }
 #guests .guest:nth-child(3):after{
     content: "";
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     position: absolute;
-    left: 50%;
-    bottom: 0px;
+    left: 70%;
+    bottom: 40px;
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -151,12 +151,12 @@ div#arrow img{
     }
     
 }
-#staff h1, #contact h1{
+#staff h1, #contact h1, #legal h1, #categories .category:last-child h1, #title h1, #participate h1{
     position: relative;
     width: fit-content;
     margin-inline: auto;
 }
-#staff h1::before, #contact h1::before{
+#staff h1::before, #contact h1::before, #legal h1::before, #categories .category:last-child h1::before, #participate h1::before{
     content: "";
     width: 200px;
     height: 200px;
@@ -170,7 +170,7 @@ div#arrow img{
     z-index: -1;
 
 }
-#staff #arrow{
+#staff #arrow, #categories #arrow, #participation #arrow{
     left: 10%;
 }
 #staff .category:last-child{
@@ -179,15 +179,14 @@ div#arrow img{
 #staff .category:last-child:after{
     content: "";
     position: absolute;
-    top: 100px;
+    top: 0px;
     right: 0;
     width: 200px;
     height: 200px;
     background: url("../images/shapes/falling_star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    transform: translate(-50%,-50%);
-    animation: move 1s infinite linear;
+    animation: move 3s infinite linear;
     
 
 }
@@ -228,8 +227,8 @@ div#arrow img{
     position: absolute;
     top: 100%;
     left: 0;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     background: url("../images/shapes/falling_star.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -241,12 +240,12 @@ div#arrow img{
     position: relative;
 }
 #shop .article:first-child::before{
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     content: "";
     position: absolute;
-    top: 65%;
-    left: -150px;
+    top: 70%;
+    left: -100px;
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -255,12 +254,12 @@ div#arrow img{
 }
 
 #shop .article:last-child::after{
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     content: "";
     position: absolute;
-    top: -150px;
-    left: calc(100% - 150px);
+    top: -100px;
+    left: calc(100% - 100px);
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -299,7 +298,7 @@ div#arrow img{
     background: url("../images/shapes/falling_star.png");
     background-size: contain;
     background-repeat: no-repeat;
-    animation: move 1s infinite linear;
+    animation: move 3s infinite linear;
     scale: 1 -1;
 
 }
@@ -334,9 +333,9 @@ div#arrow img{
     content: "";
     position: absolute;
     top: 50%;
-    left: -50px;
-    width: 200px;
-    height: 200px;
+    left: -75px;
+    width: 150px;
+    height: 150px;
     transform: translate(100%,-50%);
     background: url("../images/shapes/falling_star.png");
     background-size: contain;
@@ -349,4 +348,378 @@ div#arrow img{
 #cart .ctaButton #arrow{
     position: static;
     transform: rotate(-90deg);
+}
+#cart a.cta{
+    position: relative;
+}
+#cart a.cta::before{
+    content: "";
+    width: 100px;
+    height: 100px;
+    background: url("../images/shapes/fleche.png");
+    position: absolute;
+    left: 0;
+    top: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: rotate(-90deg) translateY(calc(-100% - 50px)) translateX(75%);
+    animation: leftNright infinite 2s;
+}
+
+@keyframes leftNright {
+    0%{
+        transform: rotate(-90deg) translateY(calc(-100% - 50px)) translateX(75%);
+    }
+    50%{
+        transform: rotate(-90deg) translateY(calc(-100% - 40px)) translateX(75%);
+    }
+    100%{
+        transform: rotate(-90deg) translateY(calc(-100% - 50px)) translateX(75%);
+    }
+    
+}
+
+#verify {
+    position: relative;
+}
+#verify::before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: -200px;
+    top: calc(50% - 75px);
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 5s;
+
+}
+
+#form form{
+    position: relative;
+    padding-top: 5rem;
+}
+#form.login form:after{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    right: 0px;
+    top:  -75px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 5s;
+
+}
+#form p + form:after{
+    background: none;
+}
+#form p + form:before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: 0px;
+    transform: translate(-100%,0) scale(-1);
+    top: 100%;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+}
+#form form button{
+    position: relative;
+}
+#form form button::before{
+    content: "";
+    width: 100px;
+    height: 100px;
+    background: url("../images/shapes/fleche.png");
+    position: absolute;
+    left: 0;
+    top: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: rotate(-90deg) translateY(calc(-100% - 50px)) translateX(75%);
+    animation: leftNright infinite 2s;
+
+}
+#form form .form_section:nth-child(2),#form form .form_section:nth-child(3),#form form .form_section:nth-child(4) {
+    position: relative;
+}
+#form form .form_section:nth-child(2):before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: -100px;
+    transform: translate(-100%,-75%) scaleX(-1);
+    top: 100%;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+
+}
+#form form .form_section:nth-child(3):after{
+    content: "";
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 100%;
+    top: 100%;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 5s;
+}
+#form form .form_section:nth-child(4)::after{
+    content: "";
+    width: 66%;
+    aspect-ratio: 1/1;
+    height: auto;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    transform: scaleX(-1) translateX(-50%);
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1
+
+}
+#profil .container section{
+    position: relative;
+}
+#profil .container section::after{
+    content: "";
+    width: 800px;
+    height: 800px;
+    position: absolute;
+    left: 40%;
+    top: 0;
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1;
+    transform: scaleY(-1) rotate(90deg);
+    opacity: 0.2;
+
+}
+
+#contact .contact_form{
+    position: relative;
+}
+#contact .contact_form::before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: -50%;
+    transform: translate(-100%,-75%) scale(-1);
+    top: 25%;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 1;
+
+}
+#contact .contact_form .contact_info:nth-last-child(2){
+    position: relative;
+}
+#contact .contact_form .contact_info:nth-last-child(2):after{
+    width: 150px;
+    height: 150px;
+    content: "";
+    position: absolute;
+    top: calc(100% - 150px);
+    right: -50px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    animation: rotate linear infinite 5s;
+
+}
+#legal{
+    position: relative;
+    padding-bottom: 10rem;
+}
+#legal:after{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: 0;
+    transform: translate(-50%,0) scale(-1);
+    bottom: 0;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+#legal h1{
+    position: relative;
+}
+#legal section:nth-child(4){
+    position: relative;
+}
+#legal section:nth-child(4)::after{
+    width: 150px;
+    height: 150px;
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: -75px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    animation: rotate linear infinite 5s;
+
+}
+#title h1::after{
+    content: "";
+    width: 200px;
+    height: 200px;
+    transform: translate(-50%,-50%);
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    z-index: -1;
+}
+#works{
+    position: relative;
+}
+#works::after{
+    content: "";
+    position: absolute;
+    top: calc(100% - 200px);
+    right: 100px;
+    width: 200px;
+    height: 200px;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: move 3s infinite linear;
+    scale: 1 -1;
+}
+
+#work h2{
+    position: relative;
+}
+#work h2::before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: -175px;
+    top: calc(50% - 75px);
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: rotate infinite linear 5s;
+
+}
+#userWorks{
+    position: relative;
+}
+#userWorks::after{
+    content: "";
+    width: 600px;
+    height: 600px;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    transform: translateX(-50%);
+    background: url("../images/shapes/circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+#participation fieldset:nth-last-child(5){
+    position: relative;
+}
+#participation fieldset:nth-last-child(5)::after{
+    content: "";
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: calc(100% - 100px);
+    top: calc(100% - 100px);
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#participation form{
+    position: relative;
+    width: fit-content;
+    margin-inline: auto;
+}
+#participation form::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 150px;
+    height: 150px;
+    transform: translateY(25%) translateX(50%);
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    scale: 1 -1;
+}
+
+#participate form > div:nth-child(2){
+    position: relative;
+}
+
+#participate form > div:nth-child(2)::after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -66%;
+    width: 150px;
+    height: 150px;
+    background: url("../images/shapes/falling_star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: rotate(30deg) translate(-50%,50%);
+
+}
+#participate form > div:nth-child(4){
+    position: relative;
+}
+#participate form > div:nth-child(4)::before{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: -75px;
+    top: -75px;
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#participate form > div:nth-last-child(2){
+    position: relative;
+}
+
+#participate form > div:nth-last-child(2)::after{
+    content: "";
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    right: -75px;
+    top: calc(50%-75px);
+    background: url("../images/shapes/star.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#participate #arrow{
+    left: 10%;
 }
