--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,12 @@
     }
     
 }
-
+@keyframes appear{
+    to{
+        transform: translateY(-50px);
+        opacity: 1;
+    }
+}
 body main{
     padding: 0;
 }
@@ -289,6 +294,11 @@ body main{
 }
 #about .container{
     margin-block: 5rem;
+    opacity: 0;
+}
+
+#about .container.active{
+    animation: appear 1s forwards;
 }
 #about .picture{
     flex-basis: 30%;
@@ -320,7 +330,8 @@ body main{
     width: 75px;
     height: 2px;
     bottom: -50%;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background: linear-gradient(45deg,#845917,#DAC469 50%);
 }
 #about p{
