--- a/public/css/legal.css
+++ b/public/css/legal.css
@@ -3,8 +3,9 @@ main > .container > section{
     margin-block: 10rem;
 }
 main > .container {
-    margin-top: 15rem;
+    margin-top: 10rem;
     text-align: justify;
+    width: calc(100% - 250px)
     
 }
 main > .container h1{
@@ -13,7 +14,6 @@ main > .container h1{
     text-align: center;
 }
 main > .container > p{
-    width: 50%;
     text-align: center;
     margin-inline: auto;
     margin-bottom: 15rem;
