--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,6 +5,7 @@ main{
 #form h1{
     font-size: 5rem;
     text-align: center;
+    margin-top: 10rem;
 }
 #form form{
     width: 60%;
@@ -222,4 +223,7 @@ main{
 #form .container > p{
     text-align: center;
     margin-bottom: 5rem;
+}
+#confirm.hidden{
+    display: none;
 }
