--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,3 +1,4 @@
+
 .category h1{
     font-size: 3rem;
     display: flex;
@@ -6,6 +7,7 @@
     margin-bottom: 3rem;
     width: fit-content;
     text-transform: none;
+    
 }
 .category h1 span{
     display: inline-block;
@@ -71,9 +73,10 @@ div.hidden{
     display: flex;
     justify-content: flex-end;
     margin-bottom: 3rem;
+    margin-top: 10rem;
 }
 .switch h3{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: normal;
     position: relative;
     margin-left: 3rem;
