--- a/public/css/category.css
+++ b/public/css/category.css
@@ -7,6 +7,7 @@ section h1{
     color: white;
     margin: 0;
     text-transform: uppercase;
+    margin-top: 10rem;
 }
 
 section#title.empty{
@@ -138,7 +139,7 @@ section h2 span a{
     margin-top: 0.5rem;
 }
 .switch h3{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: normal;
     margin: 0;
     margin-left: 4rem;
