--- a/public/css/shapes.css
+++ b/public/css/shapes.css
@@ -21,7 +21,7 @@
     width: 150px;
     height: 150px;
     position: absolute;
-    left: -200px;
+    left: -100px;
     transform: translate(-50%,-50%) scaleX(-1);
     top: 100%;
     background: url("../images/shapes/falling_star.png");
@@ -42,18 +42,20 @@
     
 }
 div#arrow {
-    position: fixed;
+    position: absolute;
     width: fit-content;
     height: fit-content;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 90%;
     animation: upNdown 2s infinite;
-    z-index: 2;
+    z-index: -1;
 }
 div#arrow img{
-    width: 100px;
+    width: 75px;
 }
+#home #arrow{
+    top: 50%;
+    left: 95%;
+}
+
 #door{
     width: 100vw;
     height: 100vh; 
@@ -133,13 +135,13 @@ div#arrow img{
     position: relative;
     z-index: 1;
 }
-#guests .guest:nth-child(3):after{
+#guests .guest:nth-child(3) .shape{
     content: "";
     width: 200px;
     height: 200px;
     position: absolute;
-    left: 70%;
-    bottom: 40px;
+    left: calc(100% - 100px);
+    top: calc(100% - 100px);
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -170,8 +172,9 @@ div#arrow img{
     z-index: -1;
 
 }
-#staff #arrow, #categories #arrow, #participation #arrow{
-    left: 10%;
+#staff #arrow{
+    left: -40px;
+    top: 50%;
 }
 #staff .category:last-child{
     position: relative;
@@ -275,9 +278,9 @@ div#arrow img{
 
 #product .container .pictures::before{
     content: "";
-    width:  800px;
-    height: 800px;
-    transform: scaleY(-1) translateX(-75%) translateY(15%);
+    width:  400px;
+    height: 400px;
+    transform: scaleY(-1) translateX(-50%) translateY(25%);
     background: url("../images/shapes/circle_thin.png");
     background-size: contain;
     background-repeat: no-repeat;
@@ -287,7 +290,31 @@ div#arrow img{
     z-index: -1;
 
 }
-
+#participation #arrow{
+    left: -60px;
+    top: 50%;
+}
+#categories .container{
+    position: relative;
+}
+#categories #arrow{
+    left: -100px;
+    top: 50%;
+}
+#participate{
+    position: relative;
+}
+#userWorks .container{
+    position: relative;
+}
+#userWorks .container #arrow{
+    top: 100%;
+    left: 100%;
+}
+#participate #arrow{
+    left: 90%;
+    top: 75%;
+}
 #product .container .pictures::after{
     content: "";
     position: absolute;
@@ -719,7 +746,4 @@ div#arrow img{
     background: url("../images/shapes/star.png");
     background-size: contain;
     background-repeat: no-repeat;
-}
-#participate #arrow{
-    left: 10%;
 }
