--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -1,15 +1,12 @@
-#shop .logo img{
-    width: 200px;
-    display: block;
-    margin-inline: auto;
-}
+
 #shop .articles{
     display: flex;
     justify-content: center;
-    margin-top: 6rem;
+    margin-top: 10rem;
 }
 #shop .article{
     flex-basis: 33%;
+    
     margin-inline: 2rem;
 }
 #shop .article a{
@@ -18,7 +15,8 @@
 }
 #shop .article a img{
     width: 100%;
-    height: 700px;
+    aspect-ratio: 1/2;
+    height: auto;
     object-fit: cover;
 }
 #shop .article a img.back{
