--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -8,6 +8,7 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     text-align: center;
+    margin-top: 10rem;
 }
 #about p:nth-child(2){
     margin-bottom: 5rem;
@@ -29,12 +30,15 @@
 #staff .category{
     border-bottom: solid rgba(255, 255, 255, 0.5) 2px;
     padding-bottom: 8rem;
+    width: 85%;
+    margin-inline: auto;
+    position: relative;
 }
 #staff .cards{
     display: flex;
 }
 #staff .card{
-    width: 24%;
+    width: 32%;
     margin-right: 1%;
     position: relative;
 }
@@ -44,7 +48,7 @@
     transition: all 0.5s;
 }
 #staff .card img.back{
-    width: 75%;
+    width: 90%;
     position: absolute;
     top: 0;
     left: 50%;
@@ -53,7 +57,7 @@
 }
 #staff .card img.front{
     display: block;
-    width: 75%;
+    width: 90%;
     margin-inline: auto;
     position: relative;
     z-index: 1;
@@ -78,7 +82,7 @@
     transition-delay: 0.2s;
 }
 #staff h4{
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: normal;
     margin-bottom: 1rem;
     margin-top: 2rem;
