--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,6 @@
     -webkit-text-fill-color: white;
     -webkit-background-clip: text;
 }
-html {
-    font-size: 62.5%;
-}
 body{
     color: white;
     background-color: #080808;
@@ -22,6 +19,7 @@ body{
     flex-direction: column;
     min-height: 100vh;
     font-size: 1.6rem;
+    overflow-x: hidden;
 }
 .background{
     position: fixed;
@@ -47,7 +45,7 @@ main{
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    padding-bottom: 100px;
 }
 p{
     font-size: 2rem;
@@ -90,7 +88,7 @@ header > nav > a{
     flex-basis: 10%;
 }
 header img{
-    height: 100px;
+    height: 90px;
 }
 
 header nav .menu > a, .deroulant label, .deroulant > a{
@@ -102,7 +100,7 @@ header nav .menu > a, .deroulant label, .deroulant > a{
     margin-block: 0.5rem;
     font-weight: 500;
     font-family: Moonic;
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: 2px;
     position: relative;
     z-index: 1;
@@ -151,7 +149,7 @@ header nav .menu{
     display: block;
     font-weight: 500;
     font-family: Moonic;
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: 2px;
 }
 .account .button:before{
@@ -250,7 +248,7 @@ header nav > label{
     text-align: left;
     color: white;
     padding-block: 2rem;
-    font-size: 2rem;
+    font-size: 1.8rem;
     display: block;
     text-decoration: none;
     font-weight: normal;
@@ -463,10 +461,13 @@ footer .links span{
 footer .links a{
     margin: 0;
 }
-
-@media screen and (max-width: 1280px) {
-    html{
+@media screen and (min-width: 900px){
+    html {
         font-size: 55%;
     }
-    
+}
+@media screen and (min-width: 1400px){
+    html {
+        font-size: 62.5%;
+    }
 }
