--- a/public/css/work.css
+++ b/public/css/work.css
@@ -3,12 +3,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 5rem;
+    margin-top: 10rem;
 }
-section .container{
-    max-width: 100%;
-    margin-inline: 10%;
-}
+
 #work h1{
     font-size: 4.5rem;
     font-style: italic;
@@ -93,7 +90,6 @@ section .container{
 }
 section h1{
     font-size: 4rem;
-    white-space: nowrap;
     margin-bottom: 6rem;
     font-family: Moonic;
 }
@@ -105,7 +101,7 @@ section h1 span a{
 }
 section .works{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     overflow-x: scroll;
 }
 section .works .work{
@@ -128,14 +124,13 @@ section .works h2, section .works h3, section .works h4{
     font-weight: normal;
 }
 section .works h2{
-    font-size: 3rem;
+    font-size: 2.2rem;
     margin-top: 0;
-    white-space: nowrap;
     font-family: Montserrat;
     letter-spacing: 0;
 }
 section .works h3{
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-top: 1.5rem;
     margin-bottom: 0;
     font-family: Montserrat;
